# 3-wire

./: CMakeLists.txt  LICENSE  README.md  helper_header.hpp  sericat.hpp  sericat_sdo.hpp  sericat_sdo_map.hpp  sericat_slave.hpp  sericat_types.hpp  stringycat.hpp  test.py  token_parser.hpp  unit_test_driver.cpp
3-wire_peripheral/: 3-wire_peripheral.ino  CMakeLists.txt  MyClass.cpp  MyClass.hpp
bb_slave/: helper_header.hpp
inos/bb_master/: bb_master.ino
inos/bb_slave/: bb_slave.ino
inos/serial_daisy_chain_test/: serial_daisy_chain_test.ino
pynode/: __init__.py  duplex_pynode.py
python_prototyping/: duplex_test.py
python_prototyping/pynode/: pynode.py
rotary_test/: rotary_test.ino
serial_daisy_chain_test/: serial_daisy_chain_test.ino
test/: base_simulator.hpp  helper_unit_tests.hpp  sericat_map_tests.hpp  sericat_sdo_tests.hpp  sericat_slave_tests.hpp  sillycat_sdo_tests.hpp  sim_test.hpp  slave_simlulator  unit_test_driver.cpp
test/simulator/: base_simulator.hpp  master_simlulator.hpp  sim_test.hpp  slave_simlulator.hpp
